--- a/translations/messages.pt.xlf
+++ b/translations/messages.pt.xlf
@@ -591,51 +591,51 @@
             </trans-unit>
             <trans-unit id="3010028">
                 <source>ficha.tecnica.vueltas.volante</source>
-                <target>Vueltas de volante de tope a tope</target>
+                <target>Volantes do volante de cima para baixo</target>
             </trans-unit>
             <trans-unit id="3010029">
                 <source>ficha.tecnica.largo</source>
-                <target>Largo (milímetros)</target>
+                <target>Comprimento (mm)</target>
             </trans-unit>
             <trans-unit id="3010030">
                 <source>ficha.tecnica.ancho</source>
-                <target>Ancho (milímetros)</target>
+                <target>Largura (milímetros)</target>
             </trans-unit>
             <trans-unit id="3010031">
                 <source>ficha.tecnica.alto</source>
-                <target>Alto (milímetros)</target>
+                <target>Alta (milímetros)</target>
             </trans-unit>
             <trans-unit id="3010032">
                 <source>ficha.tecnica.distancia.ejes</source>
-                <target>Distancia entre ejes (mm)</target>
+                <target>Distância entre os eixos (mm)</target>
             </trans-unit>
             <trans-unit id="3010033">
                 <source>ficha.tecnica.via.delantera</source>
-                <target>Vía delantera (mm)</target>
+                <target>Faixa dianteira (mm)</target>
             </trans-unit>
             <trans-unit id="3010034">
                 <source>ficha.tecnica.via.trasera</source>
-                <target>Vía trasera (mm)</target>
+                <target>Trilha traseira (mm)</target>
             </trans-unit>
             <trans-unit id="3010035">
                 <source>ficha.tecnica.peso</source>
-                <target>Peso (Kg)</target>
+                <target>Peso (kg)</target>
             </trans-unit>
             <trans-unit id="3010036">
                 <source>ficha.tecnica.capacidad.maletero</source>
-                <target>Capacidad del maletero</target>
+                <target>Capacidade de inicialização</target>
             </trans-unit>
             <trans-unit id="3010037">
                 <source>ficha.tecnica.deposito.combustible</source>
-                <target>Depósito combustible (litros)</target>
+                <target>Tanque de combustível (litros)</target>
             </trans-unit>
             <trans-unit id="3010038">
                 <source>ficha.tecnica.velocidad.maxima</source>
-                <target>Velocidad máxima (Km/h)</target>
+                <target>Velocidade máxima (Km / h)</target>
             </trans-unit>
             <trans-unit id="3010039">
                 <source>ficha.tecnica.aceleracion</source>
-                <target>Aceleración de 0-100 Km/h (seg)</target>
+                <target>Aceleração de 0 a 100 km / h (seg)</target>
             </trans-unit>
             <trans-unit id="3010040">
                 <source>ficha.tecnica.consumo.urbano</source>
@@ -643,44 +643,44 @@
             </trans-unit>
             <trans-unit id="3010041">
                 <source>ficha.tecnica.consumo.extraurbano</source>
-                <target>Consumo extraurbano (l/100 Km)</target>
+                <target>Consumo extra urbano (l / 100 km)</target>
             </trans-unit>
             <trans-unit id="3010042">
                 <source>ficha.tecnica.consumo.medio</source>
-                <target>Consumo medio (l/100 Km)</target>
+                <target>Consumo médio (l / 100 km)</target>
             </trans-unit>
             <trans-unit id="3010043">
                 <source>ficha.tecnica.emisiones.co2</source>
-                <target>Emisiones de CO2 (gr/Km)</target>
+                <target>Emissões de CO2 (gr / Km)</target>
             </trans-unit>
             <trans-unit id="3010044">
                 <source>ficha.tecnica.combustible</source>
-                <target>Combustible</target>
+                <target>Combustível</target>
             </trans-unit>
 
             <trans-unit id="3010045">
                 <source>registrar.taller</source>
-                <target>Registrar taller</target>
+                <target>Oficina de registro</target>
             </trans-unit>
             <trans-unit id="3010046">
                 <source>no.hay.resultados</source>
-                <target>No se han encontrado resultados</target>
+                <target>Não foram encontrados resultados</target>
             </trans-unit>
             <trans-unit id="3010047">
                 <source>error.servidor</source>
-                <target>Ha ocurrido un error en el servidor</target>
+                <target>Ocorreu um erro no servidor</target>
             </trans-unit>
             <trans-unit id="3010048">
                 <source>contacte.admin</source>
-                <target>Si este error continua póngase en contacto con el administrador</target>
+                <target>Se esse erro persistir, entre em contato com o administrador</target>
             </trans-unit>
             <trans-unit id="3010049">
                 <source>vehiculo.no.encontrado</source>
-                <target>El vehículo no fue encontrado</target>
+                <target>O veículo não foi encontrado</target>
             </trans-unit>
             <trans-unit id="3010050">
                 <source>elemento.no.encontrado</source>
-                <target>El elemento no fue encontrado</target>
+                <target>O elemento não foi encontrado</target>
             </trans-unit>
 
         </body>
