Modify some things like    hide toolbar symfony in dev (server is difiult to clean cache prod)    make the password more secure    some colors    some icons    some validators translations files    some styles

--- a/translations/messages.ca.xlf
+++ b/translations/messages.ca.xlf
@@ -56,7 +56,7 @@
 
             <trans-unit id="7">
                 <source>vehiculos.subidos</source>
-                <target>Vehicles enviats</target>
+                <target>Vehicles pujats</target>
             </trans-unit>
             <trans-unit id="8">
                 <source>marca</source>
@@ -100,7 +100,7 @@
             </trans-unit>
             <trans-unit id="18">
                 <source>vehiculos.actualizados</source>
-                <target>Vehicles Actualitzat</target>
+                <target>Vehicles actualitzats</target>
             </trans-unit>
             <trans-unit id="19">
                 <source>ultimos.30.dias</source>
