fixing emails and some translations

--- a/translations/messages.ca.xlf
+++ b/translations/messages.ca.xlf
@@ -112,7 +112,7 @@
             </trans-unit>
             <trans-unit id="21">
                 <source>tu.publicidad</source>
-                <target>El teu Publicitat</target>
+                <target>La teva publicitat</target>
             </trans-unit>
             <trans-unit id="22">
                 <source>aqui</source>
