--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -685,6 +685,10 @@
                 <source>elemento.no.encontrado</source>
                 <target>The element was not found</target>
             </trans-unit>
+            <trans-unit id="3010051">
+                <source>cargando</source>
+                <target>Loading</target>
+            </trans-unit>
 	</body>
 	</file>
 </xliff>
