--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -723,6 +723,89 @@
                 <source>language.al</source>
                 <target>German</target>
             </trans-unit>
+
+
+            <!-- CAROUSEL -->
+
+            <!-- 1 -->
+            <trans-unit id="3010060">
+                <source>carousel.1.1</source>
+                <target> __strong__ __red__$16__/red____/strong__/month __strong__SSD Tb__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010061">
+                <source>carousel.1.2</source>
+                <target>__strong__Pay just for what you stored__/strong__</target>
+            </trans-unit>
+
+            <!-- 2 -->
+            <trans-unit id="3010062">
+                <source>carousel.2.1</source>
+                <target>Get as much __strong__SSD Tb__/strong__ you like</target>
+            </trans-unit>
+            <trans-unit id="3010063 ">
+                <source>carousel.2.2</source>
+                <target>for just __strong__ __red__$12__/red____/strong__/month per __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 3 -->
+            <trans-unit id="3010064">
+                <source>carousel.3.1</source>
+                <target>Attach a extra __strong__4Tb SSD__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010065">
+                <source>carousel.3.2</source>
+                <target>for __strong__ __red__$10__/red____/strong__/month per __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 4 -->
+            <trans-unit id="3010066">
+                <source>carousel.4.1</source>
+                <target>Getting a __strong__4Tb SSD__/strong__ when you get your VPS</target>
+            </trans-unit>
+            <trans-unit id="3010067">
+                <source>carousel.4.2</source>
+                <target>you will pay just __strong__ __red__$8__/red____/strong__/month per __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 5 -->
+            <trans-unit id="3010068">
+                <source>carousel.5.1</source>
+                <target> __strong__ __red__$10__/red____/strong__/month __strong__HDD Tb__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010069">
+                <source>carousel.5.2</source>
+                <target>__strong__Pay just for what you stored__/strong__</target>
+            </trans-unit>
+
+            <!-- 6 -->
+            <trans-unit id="3010070">
+                <source>carousel.6.1</source>
+                <target>Get as much __strong__HDD Tb__/strong__ you like</target>
+            </trans-unit>
+            <trans-unit id="3010071">
+                <source>carousel.6.2</source>
+                <target>for just __red__$6__/red____/strong__/month per __strong__Tb__/strong__</target>
+            </trans-unit>
+
+            <!-- 7 -->
+            <trans-unit id="3010072">
+                <source>carousel.7.1</source>
+                <target>Attach a extra __strong__12Tb HDD__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010073">
+                <source>carousel.7.2</source>
+                <target>for __strong__ __red__$5__/red____/strong__/month per __strong__Tb__/strong__</target>
+            </trans-unit>
+
+            <!-- 8 -->
+            <trans-unit id="3010074">
+                <source>carousel.8.1</source>
+                <target>Getting a __strong__12Tb HDD__/strong__ when you get your VPS</target>
+            </trans-unit>
+            <trans-unit id="3010075">
+                <source>carousel.8.2</source>
+                <target>you will pay just __strong__ __red__$4__/red____/strong__/month per __strong__Tb__/strong__</target>
+            </trans-unit>
 	</body>
 	</file>
 </xliff>
