--- a/translations/messages.es.xlf
+++ b/translations/messages.es.xlf
@@ -724,6 +724,95 @@
                 <target>Alemán</target>
             </trans-unit>
 
+
+
+
+            <!-- CAROUSEL -->
+
+            <!-- 1 -->
+            <trans-unit id="3010060">
+                <source>carousel.1.1</source>
+                <target>__strong____red__$16__/red____/strong__/mes __strong__SSD Tb__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010061">
+                <source>carousel.1.2</source>
+                <target>__strong__Paga sólo por lo que almacenas__/strong__</target>
+            </trans-unit>
+
+            <!-- 2 -->
+            <trans-unit id="3010062">
+                <source>carousel.2.1</source>
+                <target>Obten tantos __strong__SSD Tb__/strong__ como desees</target>
+            </trans-unit>
+            <trans-unit id="3010063 ">
+                <source>carousel.2.2</source>
+                <target>por solo __strong____red__$12__/red____/strong__/mes por __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 3 -->
+            <trans-unit id="3010064">
+                <source>carousel.3.1</source>
+                <target>Añade un disco __strong__SSD__/strong__ de __strong__ 4Tb __/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010065">
+                <source>carousel.3.2</source>
+                <target>por sólo __strong____red__$10__/red____/strong__/mes por __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 4 -->
+            <trans-unit id="3010066">
+                <source>carousel.4.1</source>
+                <target>Al añadir un disco __strong__SSD__/strong__ de __strong__4Tb __/strong__ </target>
+            </trans-unit>
+            <trans-unit id="3010067">
+                <source>carousel.4.2</source>
+                <target>al obtener tu VPS,</target>
+            </trans-unit>
+            <trans-unit id="3010068">
+                <source>carousel.4.3</source>
+                <target>pagarás sólo __strong____red__$8__/red____/strong__/mes por __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 5 -->
+            <trans-unit id="3010069">
+                <source>carousel.5.1</source>
+                <target> __strong____red__$10__/red____/strong__/mes __strong__HDD Tb__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010070">
+                <source>carousel.5.2</source>
+                <target>__strong__Paga sólo por lo que almacenas__/strong__</target>
+            </trans-unit>
+
+            <!-- 6 -->
+            <trans-unit id="3010071">
+                <source>carousel.6.1</source>
+                <target>Obten tantos __strong__HDD Tb__/strong__ como desees</target>
+            </trans-unit>
+            <trans-unit id="3010072">
+                <source>carousel.6.2</source>
+                <target>por solo __red__$6__/red____/strong__/mes por __strong__Tb__/strong__</target>
+            </trans-unit>
+
+            <!-- 7 -->
+            <trans-unit id="3010073">
+                <source>carousel.7.1</source>
+                <target>Añade un disco __strong__HDD__/strong__ de __strong__ 12Tb __/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010074">
+                <source>carousel.7.2</source>
+                <target>por sólo __strong____red__$5__/red____/strong__/mes por __strong__Tb__/strong__</target>
+            </trans-unit>
+
+            <!-- 8 -->
+            <trans-unit id="3010075">
+                <source>carousel.8.1</source>
+                <target>Al añadir un disco __strong__HDD__/strong__ de __strong__12Tb __/strong__ al obtener tu VPS,</target>
+            </trans-unit>
+            <trans-unit id="3010076">
+                <source>carousel.8.2</source>
+                <target> pagarás sólo __strong____red__$4__/red____/strong__ mes por __strong__Tb__/strong__</target>
+            </trans-unit>
+
 	</body>
 	</file>
 </xliff>
