--- a/translations/messages.pt.xlf
+++ b/translations/messages.pt.xlf
@@ -721,6 +721,95 @@
                 <target>Alemão</target>
             </trans-unit>
 
+
+
+
+            <!-- CAROUSEL -->
+
+            <!-- 1 -->
+            <trans-unit id="3010060">
+                <source>carousel.1.1</source>
+                <target>__strong__ __red__$16__/red____/strong__/mês __strong__SSD Tb__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010061">
+                <source>carousel.1.2</source>
+                <target>__strong__Pague apenas pelo que você armazena__/strong__</target>
+            </trans-unit>
+
+            <!-- 2 -->
+            <trans-unit id="3010062">
+                <source>carousel.2.1</source>
+                <target>Obtenha quantos __strong__SSD Tb__/strong__ quiser</target>
+            </trans-unit>
+            <trans-unit id="3010063 ">
+                <source>carousel.2.2</source>
+                <target>por apenas __strong__ __red__$12__/red____/strong__/mês para __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 3 -->
+            <trans-unit id="3010064">
+                <source>carousel.3.1</source>
+                <target>Adicione um __strong__SSD__/strong__ de __strong__ 4Tb __/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010065">
+                <source>carousel.3.2</source>
+                <target>por apenas __strong__ __red__$10__/red____/strong__/mês para __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 4 -->
+            <trans-unit id="3010066">
+                <source>carousel.4.1</source>
+                <target>Quando você adiciona um disco __strong__SSD__/strong__ de __strong__4Tb __/strong__ </target>
+            </trans-unit>
+            <trans-unit id="3010067">
+                <source>carousel.4.2</source>
+                <target>quando recebe seu VPS,</target>
+            </trans-unit>
+            <trans-unit id="3010068">
+                <source>carousel.4.3</source>
+                <target>você pagará apenas __strong__ __red__$8__/red____/strong__/mês por __strong__Tb__/strong__</target>
+            </trans-unit>
+            
+            <!-- 5 -->
+            <trans-unit id="3010069">
+                <source>carousel.5.1</source>
+                <target> __strong__ __red__$10__/red____/strong__/mês __strong__HDD Tb__/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010070">
+                <source>carousel.5.2</source>
+                <target>__strong__Pague apenas pelo que você armazena__/strong__</target>
+            </trans-unit>
+
+            <!-- 6 -->
+            <trans-unit id="3010071">
+                <source>carousel.6.1</source>
+                <target>Consiga quantos __strong__HDD Tb__/strong__ quiser</target>
+            </trans-unit>
+            <trans-unit id="3010072">
+                <source>carousel.6.2</source>
+                <target>por apenas __red__$6__/red____/strong__/mês para __strong__Tb__/strong__</target>
+            </trans-unit>
+
+            <!-- 7 -->
+            <trans-unit id="3010073">
+                <source>carousel.7.1</source>
+                <target>Adicione um disco __strong__HDD__/strong__ de __strong__ 12Tb __/strong__</target>
+            </trans-unit>
+            <trans-unit id="3010074">
+                <source>carousel.7.2</source>
+                <target>por apenas __strong__ __red__$5__/red____/strong__/mês para __strong__Tb__/strong__</target>
+            </trans-unit>
+
+            <!-- 8 -->
+            <trans-unit id="3010075">
+                <source>carousel.8.1</source>
+                <target>Adicionando um disco __strong__HDD__/strong__ de __strong__12Tb __/strong__ quando você recebe o seu VPS,</target>
+            </trans-unit>
+            <trans-unit id="3010076">
+                <source>carousel.8.2</source>
+                <target>você pagará apenas __strong__ __red__$4__/red____/strong__ por mês por __strong__Tb__/strong__</target>
+            </trans-unit>
+
         </body>
     </file>
 </xliff>
